--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <meta name="google-site-verification" content="4bJBmnF5sEyYjIWEi6nbOFMRSy3cm7K37VmpZpYDnVw" />
     <meta name="category" content="deportes" />
     <meta itemprop="telephone" content="12345678900" />
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
     <title>Padel Rock login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
